test/compile_errors/err_unit_elision_non_unit_variant.w
//! expect-check-fail: enum variant constructor 'Ok' expects 1 argument(s), found 0

fn main:
    let r: Result[i32, str] = Ok()
